add editor for MPSInstance run configuration